@@ -22,6 +22,8 @@ Version 0.9
 
 - Added Gettext catalog lexer.
 
+- Added Squid configuration lexer.
+
 - Greatly improved the Haskell and OCaml lexers.
 
 - The C# and Java lexers exhibited abysmal performance with some
